k8s/https/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
    annotations:
        certmanager.k8s.io/cluster-issuer: letsencrypt
        kubernetes.io/ingress.class: nginx
        kubernetes.io/tls-acme: 'true'
    name: web-nginx-ingress
    namespace: ants
spec:
    rules:
      - host: facu-test.com
        http: 
          paths:
          - path: /
            backend:
              serviceName: ants
              servicePort: 8888
      - host: www.facu-test.com
        http: 
          paths:
            - path: /
              backend:
                serviceName: ants
                servicePort: 8888
    tls:
      - hosts: 
          - facu-test.com
        secretName: tls
      - hosts: 
          - www.facu-test.com
        secretName: www-tls
